Return to standard allocator
Since we are not using it as heavily;
and because our recycling allocation is not happy when we hold something long-lived.